# royal-pizza

./: .dockerignore  .env.development  .env.example  .gitignore  Cargo.toml  DEMO.md  DOCKER.md  QUICKSTART.md  TESTING.md  architecture.md  business.md  costs.md  docker-compose.dev.yml  docker-compose.yml  readme.md  storyboard.md  todo.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/handlers/: health_handler.rs  mod.rs  order_handler.rs  pizza_handler.rs
backend/src/middleware/: cors.rs  error.rs  logging.rs  mod.rs
backend/src/repository/: db.rs  mod.rs  order_repo.rs  pizza_repo.rs  seed.rs
backend/src/routes/: api.rs
backend/src/services/: mod.rs  order_service.rs  pizza_service.rs
backend/src/utils/: mod.rs  order_number.rs
database/: README.md  init.surql  schema.surql
docker/: backend.Dockerfile  backend.dev.Dockerfile  frontend.Dockerfile  frontend.dev.Dockerfile  init-db.surql  nginx.conf
frontend/: Cargo.toml  Trunk.docker.toml  Trunk.toml  index.html  styles.css
frontend/src/: app.rs  lib.rs
frontend/src/api/: client.rs  error.rs
frontend/src/components/: cart_summary.rs  custom_pizza_card.rs  error_display.rs  layout.rs  loading.rs  mod.rs  pizza_card.rs  skeleton.rs  toast.rs
frontend/src/pages/: confirmation.rs  menu.rs  mod.rs  order.rs
frontend/src/state/: cart.rs
frontend/src/utils/: format.rs
http/: backend_health.http
scripts/: generate-jwt-secret.sh
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/dto/: mod.rs
shared/src/models/: mod.rs  order.rs  pizza.rs
shared/src/validation/: customer.rs  mod.rs  order.rs  pickup_time.rs
sprints/sprint_1/: storyboard.md
