[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Core serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Date/time handling
chrono = { version = "0.4.43", features = ["serde"] }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Backend framework
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }

# Frontend framework
leptos = "0.8.11"
leptos_router = "0.8.11"

# Database
surrealdb = "2.6.0"

# WASM dependencies
wasm-bindgen = "0.2.108"
web-sys = "0.3.85"
gloo-net = "0.6.0"

# Utilities
uuid = { version = "1.20.0", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
