[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Core serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date/time handling
chrono = { version = "0.4.43", features = ["serde"] }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Backend framework
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }

# Frontend framework
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = "0.8.11"

# Database
surrealdb = "2.6.0"

# WASM dependencies
wasm-bindgen = "0.2.108"
web-sys = "0.3.85"
gloo-net = "0.6.0"

# Utilities
uuid = { version = "1.20.0", features = ["v4", "serde", "js"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Production optimizations
[profile.release]
opt-level = 3              # Maximum optimization
lto = true                 # Link-time optimization for smaller binary
codegen-units = 1          # Better optimization (slower compile, smaller binary)
strip = true               # Strip debug symbols
panic = "abort"            # Reduce binary size by not unwinding
overflow-checks = false    # Disable overflow checks in release

[profile.release.package."*"]
opt-level = 3
codegen-units = 16         # Faster dependency compilation