[package]
name = "frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
gloo-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }

[lib]
crate-type = ["cdylib", "rlib"]
