[package]
name = "frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_router_macro = "0.8.6"
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
gloo-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
shared = { path = "../shared" }

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[lib]
crate-type = ["cdylib", "rlib"]
